--- a/style.css
+++ b/style.css
@@ -23,6 +23,18 @@ body{
     text-align: justify;
     text-transform: uppercase;
     font: bold;
-    border: 1px;color: black;
+    border: azure;
+    front: font-family
 
+}
+
+.produtos .item{
+    display: inline-block;
+    padding: 10px;
+    
+}
+
+.produtos{
+    text-align: center;
+    margin: 20px;
 }
